--- a/help.html
+++ b/help.html
@@ -191,7 +191,7 @@
     <div class="content-container">
         <!-- Verification Center Heading with Logo -->
         <div class="verification-heading">
-            <img src=""verified-tick.png
+            <img src="verified-tick.png"
                 alt="Global Glitch Media Logo">
             Verification Center
         </div>
